# Trading-App

./: .env-non-dev  Dockerfile  pyproject.toml
migrations/: env.py
migrations/versions/: 2023-11-05_e3021b0018b9_init.py  2023-11-11_d587c3fbea9f_init_operation.py  2023-11-12_683a88a691d3_add_messages_model.py
src/: __init__.py  config.py  main.py
src/auth/: manager.py  models.py  schemas.py
src/chat/: models.py  router.py  ws_connect.py
src/operations/: models.py  router.py
src/pages/: router.py
src/tasks/: router.py  tasks.py
src/templates/: base.html
tests/: conftest.py  test_auth.py  test_operations.py
