[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
redis = "^5.0.1"
fastapi-cache2 = "^0.2.1"
celery = "^5.3.5"
flower = "^2.0.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
